[gd_scene load_steps=15 format=3 uid="uid://cuptyfol5sy52"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5kyvf"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/state_machine.gd" id="2_ub14e"]
[ext_resource type="PackedScene" uid="uid://baoec8cqmedf6" path="res://Scenes/worker_slot.tscn" id="2_ugx0h"]
[ext_resource type="PackedScene" uid="uid://y2i3u6n1oowh" path="res://Scenes/deck.tscn" id="3_gwbfn"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/draft_state.gd" id="3_lo4ro"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/setup_state.gd" id="3_t8u1m"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/management_state.gd" id="4_fkrfk"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/worker_state.gd" id="5_u4lqc"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/holding_worker_state.gd" id="6_j37yg"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/shift_state.gd" id="7_4jvhu"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/holding_client_state.gd" id="8_0374u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78syh"]
size = Vector2(920, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vw0g8"]
size = Vector2(308, 269)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jxmks"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true

[node name="Player" type="Node2D" node_paths=PackedStringArray("fsm")]
script = ExtResource("1_5kyvf")
fsm = NodePath("StateMachine")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_ub14e")

[node name="Draft" type="Node2D" parent="StateMachine"]
visible = false
script = ExtResource("3_lo4ro")

[node name="Label" type="Label" parent="StateMachine/Draft"]
offset_left = -151.0
offset_top = -518.0
offset_right = 117.0
offset_bottom = -476.0
theme_override_font_sizes/font_size = 28
text = "Choose x cards"

[node name="ConfirmDraft" type="Button" parent="StateMachine/Draft"]
offset_left = -214.0
offset_top = 275.0
offset_right = 184.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 100
text = "Confirm"

[node name="CancelDraft" type="Button" parent="StateMachine/Draft"]
visible = false
offset_left = -435.0
offset_top = 313.0
offset_right = -266.0
offset_bottom = 390.0
theme_override_font_sizes/font_size = 50
text = "Cancel"

[node name="Setup" type="Node2D" parent="StateMachine"]
visible = false
script = ExtResource("3_t8u1m")

[node name="Management" type="Node2D" parent="StateMachine"]
visible = false
script = ExtResource("4_fkrfk")

[node name="RosterButton" type="Area2D" parent="StateMachine/Management"]
position = Vector2(0, 476)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Management/RosterButton"]
position = Vector2(13, 19)
shape = SubResource("RectangleShape2D_78syh")

[node name="Money" type="Label" parent="StateMachine/Management"]
offset_left = -860.0
offset_top = -154.0
offset_right = -803.0
offset_bottom = -14.0
theme_override_font_sizes/font_size = 80
text = "$"

[node name="Cost" type="Label" parent="StateMachine/Management"]
offset_left = -624.0
offset_top = -154.0
offset_right = -567.0
offset_bottom = -14.0
theme_override_colors/font_color = Color(0.839216, 0, 0.105882, 1)
theme_override_font_sizes/font_size = 80

[node name="HireWorkerButton" type="Button" parent="StateMachine/Management"]
offset_left = 629.0
offset_top = -103.0
offset_right = 833.0
offset_bottom = -54.0
theme_override_font_sizes/font_size = 24
text = "Hire Worker: $60"

[node name="StartRound" type="Button" parent="StateMachine/Management"]
offset_left = 138.0
offset_top = -530.0
offset_right = 483.0
offset_bottom = -467.0
theme_override_font_sizes/font_size = 40
text = "End Management"

[node name="RoundCounter" type="Label" parent="StateMachine/Management"]
offset_left = -410.0
offset_top = -519.0
offset_right = -308.0
offset_bottom = -482.0
theme_override_font_sizes/font_size = 24
text = "Round: 1"

[node name="PhaseLabel" type="Label" parent="StateMachine/Management"]
offset_left = -151.0
offset_top = -518.0
offset_right = 117.0
offset_bottom = -476.0
theme_override_font_sizes/font_size = 28
text = "Management Phase"

[node name="Worker" type="Node2D" parent="StateMachine"]
visible = false
script = ExtResource("5_u4lqc")

[node name="ReturnButton" type="Area2D" parent="StateMachine/Worker"]
position = Vector2(-844, 180)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Worker/ReturnButton"]
position = Vector2(-68, 2)
shape = SubResource("RectangleShape2D_vw0g8")
disabled = true

[node name="Label" type="Label" parent="StateMachine/Worker/ReturnButton"]
offset_left = -45.0
offset_top = 54.0
offset_right = 5.0
offset_bottom = 80.0
text = "return"

[node name="WorkerPlaySlots" type="Node2D" parent="StateMachine/Worker"]

[node name="Slot1" parent="StateMachine/Worker/WorkerPlaySlots" instance=ExtResource("2_ugx0h")]
position = Vector2(-631, 169)
scale = Vector2(1.5, 1.5)

[node name="Slot2" parent="StateMachine/Worker/WorkerPlaySlots" instance=ExtResource("2_ugx0h")]
position = Vector2(-317, 169)
scale = Vector2(1.5, 1.5)

[node name="Slot3" parent="StateMachine/Worker/WorkerPlaySlots" instance=ExtResource("2_ugx0h")]
position = Vector2(0, 169)
scale = Vector2(1.5, 1.5)

[node name="Slot4" parent="StateMachine/Worker/WorkerPlaySlots" instance=ExtResource("2_ugx0h")]
position = Vector2(317, 169)
scale = Vector2(1.5, 1.5)

[node name="Slot5" parent="StateMachine/Worker/WorkerPlaySlots" instance=ExtResource("2_ugx0h")]
position = Vector2(629, 169)
scale = Vector2(1.5, 1.5)

[node name="HoldingWorker" type="Node2D" parent="StateMachine/Worker"]
script = ExtResource("6_j37yg")

[node name="Shift" type="Node2D" parent="StateMachine"]
visible = false
script = ExtResource("7_4jvhu")

[node name="EndRound" type="Button" parent="StateMachine/Shift"]
visible = false
offset_left = 138.0
offset_top = -530.0
offset_right = 317.0
offset_bottom = -467.0
theme_override_font_sizes/font_size = 40
text = "End Shift"

[node name="HoldingClient" type="Node2D" parent="StateMachine/Shift"]
script = ExtResource("8_0374u")

[node name="PreviewTask" type="Node2D" parent="StateMachine/Shift/HoldingClient"]
position = Vector2(-154, -346)

[node name="Payout" type="Label" parent="StateMachine/Shift/HoldingClient"]
offset_left = -624.0
offset_top = -154.0
offset_right = -567.0
offset_bottom = -14.0
theme_override_colors/font_color = Color(0, 0.858824, 0, 1)
theme_override_font_sizes/font_size = 80

[node name="EndTurn" type="Button" parent="StateMachine/Shift/HoldingClient"]
visible = false
offset_left = 699.0
offset_top = -525.0
offset_right = 879.0
offset_bottom = -462.0
theme_override_font_sizes/font_size = 40
text = "End Turn"

[node name="Money" type="Label" parent="StateMachine/Shift"]
offset_left = -860.0
offset_top = -154.0
offset_right = -803.0
offset_bottom = -14.0
theme_override_font_sizes/font_size = 80
text = "$"

[node name="TurnCounter" type="Label" parent="StateMachine/Shift"]
offset_left = -545.0
offset_top = -518.0
offset_right = -464.0
offset_bottom = -481.0
theme_override_font_sizes/font_size = 24
text = "Turn: 1"

[node name="PhaseLabel" type="Label" parent="StateMachine/Shift"]
offset_left = -151.0
offset_top = -518.0
offset_right = 117.0
offset_bottom = -476.0
theme_override_font_sizes/font_size = 28
text = "Shift Phase"

[node name="RosterSection" type="Node2D" parent="."]

[node name="Position1" type="Node2D" parent="RosterSection"]
position = Vector2(-489, 525)

[node name="Position2" type="Node2D" parent="RosterSection"]
position = Vector2(-238, 525)

[node name="Position3" type="Node2D" parent="RosterSection"]
position = Vector2(13, 525)

[node name="Position4" type="Node2D" parent="RosterSection"]
position = Vector2(263, 525)

[node name="Position5" type="Node2D" parent="RosterSection"]
position = Vector2(516, 525)

[node name="Position6" type="Node2D" parent="RosterSection"]
position = Vector2(-489, 886)

[node name="Position7" type="Node2D" parent="RosterSection"]
position = Vector2(-238, 886)

[node name="Position8" type="Node2D" parent="RosterSection"]
position = Vector2(13, 886)

[node name="Position9" type="Node2D" parent="RosterSection"]
position = Vector2(263, 886)

[node name="Position10" type="Node2D" parent="RosterSection"]
position = Vector2(516, 886)

[node name="Position11" type="Node2D" parent="RosterSection"]
position = Vector2(-489, 1201)

[node name="Position12" type="Node2D" parent="RosterSection"]
position = Vector2(-238, 1201)

[node name="Position13" type="Node2D" parent="RosterSection"]
position = Vector2(13, 1201)

[node name="Position14" type="Node2D" parent="RosterSection"]
position = Vector2(263, 1201)

[node name="Position15" type="Node2D" parent="RosterSection"]
position = Vector2(516, 1201)

[node name="TaskDrawDeck" parent="." instance=ExtResource("3_gwbfn")]
position = Vector2(500, -400)
scale = Vector2(1.5, 1.5)

[node name="Count" type="Label" parent="TaskDrawDeck"]
offset_left = -0.666656
offset_top = -25.3333
offset_right = 39.3333
offset_bottom = 0.666687
text = "0"

[node name="PoorDiscardPile" parent="." instance=ExtResource("3_gwbfn")]
position = Vector2(-800, -400)
scale = Vector2(1.5, 1.5)

[node name="GoodDiscardPile" parent="." instance=ExtResource("3_gwbfn")]
position = Vector2(-400, -400)
scale = Vector2(1.5, 1.5)

[node name="GreatDiscardPile" parent="." instance=ExtResource("3_gwbfn")]
position = Vector2(6.10352e-05, -400)
scale = Vector2(1.5, 1.5)

[node name="Hand" type="Node2D" parent="."]
position = Vector2(0, 612)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_jxmks")

[connection signal="pressed" from="StateMachine/Draft/ConfirmDraft" to="StateMachine/Draft" method="confirm_draft"]
[connection signal="pressed" from="StateMachine/Draft/CancelDraft" to="StateMachine/Draft" method="cancel_draft"]
[connection signal="input_event" from="StateMachine/Management/RosterButton" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="StateMachine/Management/RosterButton" to="." method="lift_hand"]
[connection signal="mouse_exited" from="StateMachine/Management/RosterButton" to="." method="drop_hand"]
[connection signal="pressed" from="StateMachine/Management/HireWorkerButton" to="StateMachine/Management" method="_on_hire_button_pressed"]
[connection signal="pressed" from="StateMachine/Management/StartRound" to="StateMachine/Management" method="_on_start_round_pressed"]
[connection signal="input_event" from="StateMachine/Worker/ReturnButton" to="." method="_on_area_2d_2_input_event"]
[connection signal="pressed" from="StateMachine/Shift/EndRound" to="." method="enter_management_overview_state"]
[connection signal="pressed" from="StateMachine/Shift/HoldingClient/EndTurn" to="." method="enter_shift_overview_state"]
